// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Introduce /> is true link 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="sc-bczRLJ jOdXOG"
      >
        <div
          class="sc-gsnTZi jyTlyf"
        >
          <div
            class="sc-dkzDqf hbSGLe"
          >
            <a
              class="sc-hKMtZM fZpMMJ"
              data-testid="Mlog"
            >
              Mlog
            </a>
          </div>
          <div
            class="sc-eCYdqJ bFOCbt"
          >
            <a
              class="sc-jSMfEi ecuhYD"
              data-testid="Introduce"
            >
              Introduce
            </a>
            <a
              class="sc-jSMfEi ecuhYD"
              data-testid="Posts"
            >
              Posts
            </a>
            <a
              class="sc-jSMfEi ecuhYD"
              data-testid="Plan"
            >
              Plan
            </a>
          </div>
        </div>
      </header>
    </div>
    <div>
      <section
        class="sc-gKXOVf fstWrS"
      >
        <div
          class="sc-iBkjds iCLDcX"
        >
          <p>
            <span
              id="Introduce_Title1"
            >
              This page is MinSeok develop blog. 
            </span>
            <span
              id="Introduce_Title2"
            >
              I usally use Typescript, React, Redux.
            </span>
            <span
              id="Introduce_Title3"
            >
              Thanks for look
            </span>
          </p>
        </div>
        <div
          class="sc-ftvSup"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Introduce_Logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/img.jpg"
              srcset="/img.jpg 1x, /img.jpg 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="sc-gKXOVf fstWrS"
    >
      <div
        class="sc-iBkjds iCLDcX"
      >
        <p>
          <span
            id="Introduce_Title1"
          >
            This page is MinSeok develop blog. 
          </span>
          <span
            id="Introduce_Title2"
          >
            I usally use Typescript, React, Redux.
          </span>
          <span
            id="Introduce_Title3"
          >
            Thanks for look
          </span>
        </p>
      </div>
      <div
        class="sc-ftvSup"
      >
        <span
          style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
        >
          <span
            style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
          >
            <img
              alt=""
              aria-hidden="true"
              src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
              style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
            />
          </span>
          <img
            alt="Introduce_Logo"
            data-nimg="intrinsic"
            decoding="async"
            src="/img.jpg"
            srcset="/img.jpg 1x, /img.jpg 2x"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
        </span>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Introduce /> is true link 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="sc-bczRLJ jOdXOG"
      >
        <div
          class="sc-gsnTZi jyTlyf"
        >
          <div
            class="sc-dkzDqf hbSGLe"
          >
            <a
              class="sc-hKMtZM fZpMMJ"
              data-testid="Mlog"
            >
              Mlog
            </a>
          </div>
          <div
            class="sc-eCYdqJ bFOCbt"
          >
            <a
              class="sc-jSMfEi ecuhYD"
              data-testid="Introduce"
            >
              Introduce
            </a>
            <a
              class="sc-jSMfEi ecuhYD"
              data-testid="Posts"
            >
              Posts
            </a>
            <a
              class="sc-jSMfEi ecuhYD"
              data-testid="Plan"
            >
              Plan
            </a>
          </div>
        </div>
      </header>
    </div>
    <div>
      <section
        class="sc-gKXOVf fstWrS"
      >
        <div
          class="sc-iBkjds iCLDcX"
        >
          <p>
            <span
              id="Introduce_Title1"
            >
              This page is MinSeok develop blog. 
            </span>
            <span
              id="Introduce_Title2"
            >
              I usally use Typescript, React, Redux.
            </span>
            <span
              id="Introduce_Title3"
            >
              Thanks for look
            </span>
          </p>
        </div>
        <div
          class="sc-ftvSup"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Introduce_Logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/img.jpg"
              srcset="/img.jpg 1x, /img.jpg 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
        </div>
      </section>
    </div>
    <div>
      <section
        class="sc-gKXOVf fstWrS"
      >
        <div
          class="sc-iBkjds iCLDcX"
        >
          <p>
            <span
              id="Introduce_Title1"
            >
              This page is MinSeok develop blog. 
            </span>
            <span
              id="Introduce_Title2"
            >
              I usally use Typescript, React, Redux.
            </span>
            <span
              id="Introduce_Title3"
            >
              Thanks for look
            </span>
          </p>
        </div>
        <div
          class="sc-ftvSup"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Introduce_Logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/img.jpg"
              srcset="/img.jpg 1x, /img.jpg 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="sc-gKXOVf fstWrS"
    >
      <div
        class="sc-iBkjds iCLDcX"
      >
        <p>
          <span
            id="Introduce_Title1"
          >
            This page is MinSeok develop blog. 
          </span>
          <span
            id="Introduce_Title2"
          >
            I usally use Typescript, React, Redux.
          </span>
          <span
            id="Introduce_Title3"
          >
            Thanks for look
          </span>
        </p>
      </div>
      <div
        class="sc-ftvSup"
      >
        <span
          style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
        >
          <span
            style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
          >
            <img
              alt=""
              aria-hidden="true"
              src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
              style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
            />
          </span>
          <img
            alt="Introduce_Logo"
            data-nimg="intrinsic"
            decoding="async"
            src="/img.jpg"
            srcset="/img.jpg 1x, /img.jpg 2x"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
        </span>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Introduce /> is true link 3`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="sc-bczRLJ jOdXOG"
      >
        <div
          class="sc-gsnTZi jyTlyf"
        >
          <div
            class="sc-dkzDqf hbSGLe"
          >
            <a
              class="sc-hKMtZM fZpMMJ"
              data-testid="Mlog"
            >
              Mlog
            </a>
          </div>
          <div
            class="sc-eCYdqJ bFOCbt"
          >
            <a
              class="sc-jSMfEi ecuhYD"
              data-testid="Introduce"
            >
              Introduce
            </a>
            <a
              class="sc-jSMfEi ecuhYD"
              data-testid="Posts"
            >
              Posts
            </a>
            <a
              class="sc-jSMfEi ecuhYD"
              data-testid="Plan"
            >
              Plan
            </a>
          </div>
        </div>
      </header>
    </div>
    <div>
      <section
        class="sc-gKXOVf fstWrS"
      >
        <div
          class="sc-iBkjds iCLDcX"
        >
          <p>
            <span
              id="Introduce_Title1"
            >
              This page is MinSeok develop blog. 
            </span>
            <span
              id="Introduce_Title2"
            >
              I usally use Typescript, React, Redux.
            </span>
            <span
              id="Introduce_Title3"
            >
              Thanks for look
            </span>
          </p>
        </div>
        <div
          class="sc-ftvSup"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Introduce_Logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/img.jpg"
              srcset="/img.jpg 1x, /img.jpg 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
        </div>
      </section>
    </div>
    <div>
      <section
        class="sc-gKXOVf fstWrS"
      >
        <div
          class="sc-iBkjds iCLDcX"
        >
          <p>
            <span
              id="Introduce_Title1"
            >
              This page is MinSeok develop blog. 
            </span>
            <span
              id="Introduce_Title2"
            >
              I usally use Typescript, React, Redux.
            </span>
            <span
              id="Introduce_Title3"
            >
              Thanks for look
            </span>
          </p>
        </div>
        <div
          class="sc-ftvSup"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Introduce_Logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/img.jpg"
              srcset="/img.jpg 1x, /img.jpg 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
        </div>
      </section>
    </div>
    <div>
      <div
        class="sc-papXJ iBMQDU"
      >
        <div
          class="sc-jqUVSM cwMOQU"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <div
              class="sc-iqcoie hBxChG"
            >
              <span
                style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
              >
                <img
                  alt="post_image"
                  class="sc-crXcEl cpyVzD"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
              </span>
            </div>
          </a>
          <div
            class="sc-evZas gWoiGw"
          >
            <a
              class="sc-kDDrLX bpSkHk"
            >
              <h4
                class="sc-breuTD liQFZk"
                data-testid="post_title"
              >
                Infinite carousel slider
              </h4>
              <div
                class="sc-ksZaOG guvYyZ"
              >
                <p
                  class="sc-hAZoDl ieshLc"
                  data-testid="post_content"
                >
                  TypeScript를 이용해서 만든 무한 자동 슬라이드
                </p>
              </div>
            </a>
            <div
              class="sc-fnykZs dxYbuE"
              data-testid="post_date"
            >
              <span>
                2022년 4월 28일
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-jqUVSM cwMOQU"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <div
              class="sc-iqcoie hBxChG"
            >
              <span
                style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
              >
                <img
                  alt="post_image"
                  class="sc-crXcEl cpyVzD"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
              </span>
            </div>
          </a>
          <div
            class="sc-evZas gWoiGw"
          >
            <a
              class="sc-kDDrLX bpSkHk"
            >
              <h4
                class="sc-breuTD liQFZk"
                data-testid="post_title"
              >
                Infinite reverse scroll
              </h4>
              <div
                class="sc-ksZaOG guvYyZ"
              >
                <p
                  class="sc-hAZoDl ieshLc"
                  data-testid="post_content"
                >
                  Intersection Observer를 이용한 무한 스크롤
                </p>
              </div>
            </a>
            <div
              class="sc-fnykZs dxYbuE"
              data-testid="post_date"
            >
              <span>
                2022년 5월 31일
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-jqUVSM cwMOQU"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <div
              class="sc-iqcoie hBxChG"
            >
              <span
                style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
              >
                <img
                  alt="post_image"
                  class="sc-crXcEl cpyVzD"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
              </span>
            </div>
          </a>
          <div
            class="sc-evZas gWoiGw"
          >
            <a
              class="sc-kDDrLX bpSkHk"
            >
              <h4
                class="sc-breuTD liQFZk"
                data-testid="post_title"
              >
                Input Debounce
              </h4>
              <div
                class="sc-ksZaOG guvYyZ"
              >
                <p
                  class="sc-hAZoDl ieshLc"
                  data-testid="post_content"
                >
                  debounce을 이용한 성능 향상 공부
                </p>
              </div>
            </a>
            <div
              class="sc-fnykZs dxYbuE"
              data-testid="post_date"
            >
              <span>
                2022년 6월 11일
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-jqUVSM cwMOQU"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <div
              class="sc-iqcoie hBxChG"
            >
              <span
                style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
              >
                <img
                  alt="post_image"
                  class="sc-crXcEl cpyVzD"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
              </span>
            </div>
          </a>
          <div
            class="sc-evZas gWoiGw"
          >
            <a
              class="sc-kDDrLX bpSkHk"
            >
              <h4
                class="sc-breuTD liQFZk"
                data-testid="post_title"
              >
                Reverse Infinite reverse scroll
              </h4>
              <div
                class="sc-ksZaOG guvYyZ"
              >
                <p
                  class="sc-hAZoDl ieshLc"
                  data-testid="post_content"
                >
                  Intersection Observer를 이용한 역 무한 스크롤
                </p>
              </div>
            </a>
            <div
              class="sc-fnykZs dxYbuE"
              data-testid="post_date"
            >
              <span>
                2022년 6월 18일
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-jqUVSM cwMOQU"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <div
              class="sc-iqcoie hBxChG"
            >
              <span
                style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
              >
                <img
                  alt="post_image"
                  class="sc-crXcEl cpyVzD"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
              </span>
            </div>
          </a>
          <div
            class="sc-evZas gWoiGw"
          >
            <a
              class="sc-kDDrLX bpSkHk"
            >
              <h4
                class="sc-breuTD liQFZk"
                data-testid="post_title"
              >
                ClipBoard Class Components
              </h4>
              <div
                class="sc-ksZaOG guvYyZ"
              >
                <p
                  class="sc-hAZoDl ieshLc"
                  data-testid="post_content"
                >
                  Class형태의 클립보드 라이브러리 만들기 및 적용시키기
                </p>
              </div>
            </a>
            <div
              class="sc-fnykZs dxYbuE"
              data-testid="post_date"
            >
              <span>
                2022년 7월 6일
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-jqUVSM cwMOQU"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <div
              class="sc-iqcoie hBxChG"
            >
              <span
                style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
              >
                <img
                  alt="post_image"
                  class="sc-crXcEl cpyVzD"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
              </span>
            </div>
          </a>
          <div
            class="sc-evZas gWoiGw"
          >
            <a
              class="sc-kDDrLX bpSkHk"
            >
              <h4
                class="sc-breuTD liQFZk"
                data-testid="post_title"
              >
                Resize Library
              </h4>
              <div
                class="sc-ksZaOG guvYyZ"
              >
                <p
                  class="sc-hAZoDl ieshLc"
                  data-testid="post_content"
                >
                  이미지 리사이징으로 크기 줄이기
                </p>
              </div>
            </a>
            <div
              class="sc-fnykZs dxYbuE"
              data-testid="post_date"
            >
              <span>
                2022년 8월 15일
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-papXJ iBMQDU"
    >
      <div
        class="sc-jqUVSM cwMOQU"
      >
        <a
          class="sc-kDDrLX bpSkHk"
        >
          <div
            class="sc-iqcoie hBxChG"
          >
            <span
              style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
            >
              <img
                alt="post_image"
                class="sc-crXcEl cpyVzD"
                data-nimg="fill"
                decoding="async"
                src="/img.jpg"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
            </span>
          </div>
        </a>
        <div
          class="sc-evZas gWoiGw"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <h4
              class="sc-breuTD liQFZk"
              data-testid="post_title"
            >
              Infinite carousel slider
            </h4>
            <div
              class="sc-ksZaOG guvYyZ"
            >
              <p
                class="sc-hAZoDl ieshLc"
                data-testid="post_content"
              >
                TypeScript를 이용해서 만든 무한 자동 슬라이드
              </p>
            </div>
          </a>
          <div
            class="sc-fnykZs dxYbuE"
            data-testid="post_date"
          >
            <span>
              2022년 4월 28일
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-jqUVSM cwMOQU"
      >
        <a
          class="sc-kDDrLX bpSkHk"
        >
          <div
            class="sc-iqcoie hBxChG"
          >
            <span
              style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
            >
              <img
                alt="post_image"
                class="sc-crXcEl cpyVzD"
                data-nimg="fill"
                decoding="async"
                src="/img.jpg"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
            </span>
          </div>
        </a>
        <div
          class="sc-evZas gWoiGw"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <h4
              class="sc-breuTD liQFZk"
              data-testid="post_title"
            >
              Infinite reverse scroll
            </h4>
            <div
              class="sc-ksZaOG guvYyZ"
            >
              <p
                class="sc-hAZoDl ieshLc"
                data-testid="post_content"
              >
                Intersection Observer를 이용한 무한 스크롤
              </p>
            </div>
          </a>
          <div
            class="sc-fnykZs dxYbuE"
            data-testid="post_date"
          >
            <span>
              2022년 5월 31일
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-jqUVSM cwMOQU"
      >
        <a
          class="sc-kDDrLX bpSkHk"
        >
          <div
            class="sc-iqcoie hBxChG"
          >
            <span
              style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
            >
              <img
                alt="post_image"
                class="sc-crXcEl cpyVzD"
                data-nimg="fill"
                decoding="async"
                src="/img.jpg"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
            </span>
          </div>
        </a>
        <div
          class="sc-evZas gWoiGw"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <h4
              class="sc-breuTD liQFZk"
              data-testid="post_title"
            >
              Input Debounce
            </h4>
            <div
              class="sc-ksZaOG guvYyZ"
            >
              <p
                class="sc-hAZoDl ieshLc"
                data-testid="post_content"
              >
                debounce을 이용한 성능 향상 공부
              </p>
            </div>
          </a>
          <div
            class="sc-fnykZs dxYbuE"
            data-testid="post_date"
          >
            <span>
              2022년 6월 11일
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-jqUVSM cwMOQU"
      >
        <a
          class="sc-kDDrLX bpSkHk"
        >
          <div
            class="sc-iqcoie hBxChG"
          >
            <span
              style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
            >
              <img
                alt="post_image"
                class="sc-crXcEl cpyVzD"
                data-nimg="fill"
                decoding="async"
                src="/img.jpg"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
            </span>
          </div>
        </a>
        <div
          class="sc-evZas gWoiGw"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <h4
              class="sc-breuTD liQFZk"
              data-testid="post_title"
            >
              Reverse Infinite reverse scroll
            </h4>
            <div
              class="sc-ksZaOG guvYyZ"
            >
              <p
                class="sc-hAZoDl ieshLc"
                data-testid="post_content"
              >
                Intersection Observer를 이용한 역 무한 스크롤
              </p>
            </div>
          </a>
          <div
            class="sc-fnykZs dxYbuE"
            data-testid="post_date"
          >
            <span>
              2022년 6월 18일
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-jqUVSM cwMOQU"
      >
        <a
          class="sc-kDDrLX bpSkHk"
        >
          <div
            class="sc-iqcoie hBxChG"
          >
            <span
              style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
            >
              <img
                alt="post_image"
                class="sc-crXcEl cpyVzD"
                data-nimg="fill"
                decoding="async"
                src="/img.jpg"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
            </span>
          </div>
        </a>
        <div
          class="sc-evZas gWoiGw"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <h4
              class="sc-breuTD liQFZk"
              data-testid="post_title"
            >
              ClipBoard Class Components
            </h4>
            <div
              class="sc-ksZaOG guvYyZ"
            >
              <p
                class="sc-hAZoDl ieshLc"
                data-testid="post_content"
              >
                Class형태의 클립보드 라이브러리 만들기 및 적용시키기
              </p>
            </div>
          </a>
          <div
            class="sc-fnykZs dxYbuE"
            data-testid="post_date"
          >
            <span>
              2022년 7월 6일
            </span>
          </div>
        </div>
      </div>
      <div
        class="sc-jqUVSM cwMOQU"
      >
        <a
          class="sc-kDDrLX bpSkHk"
        >
          <div
            class="sc-iqcoie hBxChG"
          >
            <span
              style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
            >
              <img
                alt="post_image"
                class="sc-crXcEl cpyVzD"
                data-nimg="fill"
                decoding="async"
                src="/img.jpg"
                style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
              />
            </span>
          </div>
        </a>
        <div
          class="sc-evZas gWoiGw"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <h4
              class="sc-breuTD liQFZk"
              data-testid="post_title"
            >
              Resize Library
            </h4>
            <div
              class="sc-ksZaOG guvYyZ"
            >
              <p
                class="sc-hAZoDl ieshLc"
                data-testid="post_content"
              >
                이미지 리사이징으로 크기 줄이기
              </p>
            </div>
          </a>
          <div
            class="sc-fnykZs dxYbuE"
            data-testid="post_date"
          >
            <span>
              2022년 8월 15일
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Introduce /> is true link 4`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="sc-bczRLJ jOdXOG"
      >
        <div
          class="sc-gsnTZi jyTlyf"
        >
          <div
            class="sc-dkzDqf hbSGLe"
          >
            <a
              class="sc-hKMtZM fZpMMJ"
              data-testid="Mlog"
            >
              Mlog
            </a>
          </div>
          <div
            class="sc-eCYdqJ bFOCbt"
          >
            <a
              class="sc-jSMfEi ecuhYD"
              data-testid="Introduce"
            >
              Introduce
            </a>
            <a
              class="sc-jSMfEi ecuhYD"
              data-testid="Posts"
            >
              Posts
            </a>
            <a
              class="sc-jSMfEi ecuhYD"
              data-testid="Plan"
            >
              Plan
            </a>
          </div>
        </div>
      </header>
    </div>
    <div>
      <section
        class="sc-gKXOVf fstWrS"
      >
        <div
          class="sc-iBkjds iCLDcX"
        >
          <p>
            <span
              id="Introduce_Title1"
            >
              This page is MinSeok develop blog. 
            </span>
            <span
              id="Introduce_Title2"
            >
              I usally use Typescript, React, Redux.
            </span>
            <span
              id="Introduce_Title3"
            >
              Thanks for look
            </span>
          </p>
        </div>
        <div
          class="sc-ftvSup"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Introduce_Logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/img.jpg"
              srcset="/img.jpg 1x, /img.jpg 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
        </div>
      </section>
    </div>
    <div>
      <section
        class="sc-gKXOVf fstWrS"
      >
        <div
          class="sc-iBkjds iCLDcX"
        >
          <p>
            <span
              id="Introduce_Title1"
            >
              This page is MinSeok develop blog. 
            </span>
            <span
              id="Introduce_Title2"
            >
              I usally use Typescript, React, Redux.
            </span>
            <span
              id="Introduce_Title3"
            >
              Thanks for look
            </span>
          </p>
        </div>
        <div
          class="sc-ftvSup"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="Introduce_Logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/img.jpg"
              srcset="/img.jpg 1x, /img.jpg 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
        </div>
      </section>
    </div>
    <div>
      <div
        class="sc-papXJ iBMQDU"
      >
        <div
          class="sc-jqUVSM cwMOQU"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <div
              class="sc-iqcoie hBxChG"
            >
              <span
                style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
              >
                <img
                  alt="post_image"
                  class="sc-crXcEl cpyVzD"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
              </span>
            </div>
          </a>
          <div
            class="sc-evZas gWoiGw"
          >
            <a
              class="sc-kDDrLX bpSkHk"
            >
              <h4
                class="sc-breuTD liQFZk"
                data-testid="post_title"
              >
                Infinite carousel slider
              </h4>
              <div
                class="sc-ksZaOG guvYyZ"
              >
                <p
                  class="sc-hAZoDl ieshLc"
                  data-testid="post_content"
                >
                  TypeScript를 이용해서 만든 무한 자동 슬라이드
                </p>
              </div>
            </a>
            <div
              class="sc-fnykZs dxYbuE"
              data-testid="post_date"
            >
              <span>
                2022년 4월 28일
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-jqUVSM cwMOQU"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <div
              class="sc-iqcoie hBxChG"
            >
              <span
                style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
              >
                <img
                  alt="post_image"
                  class="sc-crXcEl cpyVzD"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
              </span>
            </div>
          </a>
          <div
            class="sc-evZas gWoiGw"
          >
            <a
              class="sc-kDDrLX bpSkHk"
            >
              <h4
                class="sc-breuTD liQFZk"
                data-testid="post_title"
              >
                Infinite reverse scroll
              </h4>
              <div
                class="sc-ksZaOG guvYyZ"
              >
                <p
                  class="sc-hAZoDl ieshLc"
                  data-testid="post_content"
                >
                  Intersection Observer를 이용한 무한 스크롤
                </p>
              </div>
            </a>
            <div
              class="sc-fnykZs dxYbuE"
              data-testid="post_date"
            >
              <span>
                2022년 5월 31일
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-jqUVSM cwMOQU"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <div
              class="sc-iqcoie hBxChG"
            >
              <span
                style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
              >
                <img
                  alt="post_image"
                  class="sc-crXcEl cpyVzD"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
              </span>
            </div>
          </a>
          <div
            class="sc-evZas gWoiGw"
          >
            <a
              class="sc-kDDrLX bpSkHk"
            >
              <h4
                class="sc-breuTD liQFZk"
                data-testid="post_title"
              >
                Input Debounce
              </h4>
              <div
                class="sc-ksZaOG guvYyZ"
              >
                <p
                  class="sc-hAZoDl ieshLc"
                  data-testid="post_content"
                >
                  debounce을 이용한 성능 향상 공부
                </p>
              </div>
            </a>
            <div
              class="sc-fnykZs dxYbuE"
              data-testid="post_date"
            >
              <span>
                2022년 6월 11일
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-jqUVSM cwMOQU"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <div
              class="sc-iqcoie hBxChG"
            >
              <span
                style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
              >
                <img
                  alt="post_image"
                  class="sc-crXcEl cpyVzD"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
              </span>
            </div>
          </a>
          <div
            class="sc-evZas gWoiGw"
          >
            <a
              class="sc-kDDrLX bpSkHk"
            >
              <h4
                class="sc-breuTD liQFZk"
                data-testid="post_title"
              >
                Reverse Infinite reverse scroll
              </h4>
              <div
                class="sc-ksZaOG guvYyZ"
              >
                <p
                  class="sc-hAZoDl ieshLc"
                  data-testid="post_content"
                >
                  Intersection Observer를 이용한 역 무한 스크롤
                </p>
              </div>
            </a>
            <div
              class="sc-fnykZs dxYbuE"
              data-testid="post_date"
            >
              <span>
                2022년 6월 18일
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-jqUVSM cwMOQU"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <div
              class="sc-iqcoie hBxChG"
            >
              <span
                style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
              >
                <img
                  alt="post_image"
                  class="sc-crXcEl cpyVzD"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
              </span>
            </div>
          </a>
          <div
            class="sc-evZas gWoiGw"
          >
            <a
              class="sc-kDDrLX bpSkHk"
            >
              <h4
                class="sc-breuTD liQFZk"
                data-testid="post_title"
              >
                ClipBoard Class Components
              </h4>
              <div
                class="sc-ksZaOG guvYyZ"
              >
                <p
                  class="sc-hAZoDl ieshLc"
                  data-testid="post_content"
                >
                  Class형태의 클립보드 라이브러리 만들기 및 적용시키기
                </p>
              </div>
            </a>
            <div
              class="sc-fnykZs dxYbuE"
              data-testid="post_date"
            >
              <span>
                2022년 7월 6일
              </span>
            </div>
          </div>
        </div>
        <div
          class="sc-jqUVSM cwMOQU"
        >
          <a
            class="sc-kDDrLX bpSkHk"
          >
            <div
              class="sc-iqcoie hBxChG"
            >
              <span
                style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
              >
                <img
                  alt="post_image"
                  class="sc-crXcEl cpyVzD"
                  data-nimg="fill"
                  decoding="async"
                  src="/img.jpg"
                  style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                />
              </span>
            </div>
          </a>
          <div
            class="sc-evZas gWoiGw"
          >
            <a
              class="sc-kDDrLX bpSkHk"
            >
              <h4
                class="sc-breuTD liQFZk"
                data-testid="post_title"
              >
                Resize Library
              </h4>
              <div
                class="sc-ksZaOG guvYyZ"
              >
                <p
                  class="sc-hAZoDl ieshLc"
                  data-testid="post_content"
                >
                  이미지 리사이징으로 크기 줄이기
                </p>
              </div>
            </a>
            <div
              class="sc-fnykZs dxYbuE"
              data-testid="post_date"
            >
              <span>
                2022년 8월 15일
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        준비 중입니다.
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      준비 중입니다.
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
